added password encoder by bcrypt and improved some ui